更新了日期归类的后台与前台调用、样式，更新了首页大图和头像的显示方式

--- a/src/main/resources/static/css/archive.css
+++ b/src/main/resources/static/css/archive.css
@@ -1,3 +1,15 @@
 .events_list {
     margin-top: 640px;
 }
+
+.am-list>li>a {
+    text-align: center;
+    display: inline-block;
+    cursor: pointer;
+    border-bottom: 1px solid transparent;
+    font-size: 22px;
+    list-style-type:none;
+    width:100%;
+    font-family: "xionghaizi";
+    color: orchid;
+}
