--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -14,7 +14,7 @@
 <body>
 <div id="main-class-text">
     <!-- 主页大图 -->
-    <div ><img id="table-picture" src="../static/img/003.png"/></div>
+    <div id="table-picture" style="background-image: url('../static/img/bk.jpg')"></div>
     <!-- 标题栏 -->
     <div class="head-one">
             <header class="am-topbar am-topbar-inverse am-topbar-fixed-top">
@@ -61,7 +61,7 @@
                 <div class="card-my-head">
                     <div class="head-card-img-div">
                         <div class="card-head-left-img">
-                            <img src="../static/img/123.png" id="head-card-img"/>
+                            <img src="../static/img/header.jpg" id="head-card-img"/>
                         </div>
                     </div>
                     <div class="card-head-right-word">
